# forge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
db/: init.sql
docs/: 01-architecture.md  02-memory.md  03-forge-agent.md  04-tools-and-shell.md  05-autonomous-run.md  06-harness-and-loops.md  README.md
docs/diagrams/: 02-component-overview.md  03-memory-architecture.md  04-autonomous-run-sequence.md  05-inner-loop-state-machine.md
forge/: __init__.py  _env.py  _jsonutil.py  auth.py  clarity.py  cli.py  config.py  grounding.py  orchestrator.py  project.py  setup.py
forge/agent/: __init__.py  checkpoint.py  loop.py  permissions.py  session.py
forge/agents/: __init__.py  _prompts.py  architect.py  engineer.py
forge/improve/: __init__.py  harness.py  lessons.py  reflect.py  regression.py  skills.py
forge/memory/: __init__.py  aggregator.py  code_index.py  context_manager.py  disclosure.py  embeddings.py  episodic.py  events.py  factory.py  fusion.py  longterm.py  projectmd.py  recall.py  router.py  sessions.py  tracker.py
forge/providers/: __init__.py  _http.py  anthropic.py  base.py  deepseek.py  mock.py  ollama.py  openai.py  registry.py
forge/tools/: __init__.py  base.py  capabilities.py  factory.py  (+6 more)
tests/: conftest.py  test_agent.py  test_clarity.py  test_env.py  test_improve.py  test_loop.py  test_memory_fusion.py  test_memory_integration.py  test_memory_stores.py  test_orchestrator.py  test_plan_robustness.py  test_providers.py  test_reset.py  test_retry.py  test_router.py  test_routing.py  test_setup.py  test_tracker.py
(+5 files in other folders)
